Bug 189738 - REGRESSION(r235917): 2% regression in Dromaeo CSS selector on MacBookPro11,4
Summary: REGRESSION(r235917): 2% regression in Dromaeo CSS selector on MacBookPro11,4
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on: 166748
Blocks:
  Show dependency treegraph
 
Reported: 2018-09-19 02:09 PDT by Ryosuke Niwa
Modified: 2018-09-19 22:39 PDT (History)
4 users (show)

See Also:


Attachments
Fixes the bug (1.55 KB, patch)
2018-09-19 02:14 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Patch for landing (2.19 KB, patch)
2018-09-19 12:37 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2018-09-19 02:09:20 PDT
https://trac.webkit.org/changeset/235917 introduced ~27% regression in nth-child(~) tests and 2% regression for the total Dromaeo css selector tests.
Comment 1 Radar WebKit Bug Importer 2018-09-19 02:09:45 PDT
<rdar://problem/44595527>
Comment 2 Ryosuke Niwa 2018-09-19 02:14:47 PDT
Created attachment 350099 [details]
Fixes the bug
Comment 3 Yusuke Suzuki 2018-09-19 02:40:26 PDT
Comment on attachment 350099 [details]
Fixes the bug

r=me with one more fix.
I think generateNthLastChildParentCheckAndRelationUpdate has the same issue too.
Comment 4 Ryosuke Niwa 2018-09-19 12:37:31 PDT
(In reply to Yusuke Suzuki from comment #3)
> Comment on attachment 350099 [details]
> Fixes the bug
> 
> r=me with one more fix.
> I think generateNthLastChildParentCheckAndRelationUpdate has the same issue
> too.

Good catch! Thanks for the review.
Comment 5 Ryosuke Niwa 2018-09-19 12:37:52 PDT
Created attachment 350143 [details]
Patch for landing
Comment 6 Ryosuke Niwa 2018-09-19 12:38:09 PDT
Comment on attachment 350143 [details]
Patch for landing

Wait for EWS.
Comment 7 Ryosuke Niwa 2018-09-19 15:31:20 PDT
Committed r236228: <https://trac.webkit.org/changeset/236228>
Comment 8 Yusuke Suzuki 2018-09-19 22:39:45 PDT
Nice, it seems the regression is recovered. https://perf.webkit.org/v3/#/charts?since=1536816937999&paneList=((19-31)-(19-39)-(19-36))