REGRESSION(r235917): 2% regression in Dromaeo CSS selector on MacBookPro11,4 https://bugs.webkit.org/show_bug.cgi?id=189738

Reviewed by Yusuke Suzuki.

The regression was caused by the regundant walk to the parent element. Removed it to fix the regression.

* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::SelectorCodeGenerator::generateNthChildParentCheckAndRelationUpdate):
(WebCore::SelectorCompiler::SelectorCodeGenerator::generateNthLastChildParentCheckAndRelationUpdate):


Canonical link: https://commits.webkit.org/204709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236228 268f45cc-cd09-0410-ab3c-d52691b4dbfc